# am-mcp

./: .env.example  .gitignore  Makefile  README.md  agents.md  main.py  manifest.json  pyproject.toml
docs/: auth.md  permissions.md
handlers/: __init__.py  health.py  library.py  play.py  playback.py  playlist.py  queue.py  search.py
tests/: test_auth.py  test_dispatcher.py  test_handlers.py
utils/: apple_script.py  auth.py  exceptions.py  musickit.py
